fix display on safari

--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -1,12 +1,3 @@
-// Global styling
-html,
-body,
-#__nuxt,
-#__layout,
-#__layout > div {
-  @apply h-full;
-}
-
 // Page Transitions
 
 .page-enter-active,
